--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -3,7 +3,9 @@
 {% block content %}
 {% if userLoggedIn == true %}
 <div>
-    {{ userLoggedIn }}
+    <a href="/angular">Angular version</a>
+</div>
+<div>
     Logged in as: {{ fbUserName }}, id: {{ fbId }}
 </div>
 <div>
