--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -18,7 +18,7 @@
             <ul>
                 {% for message in thread.messages %}
                 <li>
-                    {{ message.created_time }}: {{ message.from }}: <span class="text-info">{{ message.message }}</span>
+                    {{ message.created_time }}: {{ message.from }}: <div class="text-success">{{ message.message | raw }}</div>
                 </li>
                 {% endfor %}
             </ul>
