--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,11 @@
 <head>
     <title>{% block title '' %} - My Silex Application</title>
 
-    <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width">
+
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript">
         var _gaq = _gaq || [];
