--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <title>{% block title '' %} - My Silex Application</title>
 
-    <meta name="viewport" content="width=device-width">
+    <!--<meta name="viewport" content="width=device-width">-->
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     {% block content %}{% endblock %}
 </div>
 </body>
