--- a/web/css/main.css
+++ b/web/css/main.css
@@ -6,7 +6,8 @@
         padding-left: 10px;
     }
     hr {
-        margin: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
     body {
         padding: 5px;
