--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %}silex-hriste{% endblock %}
+
 {% block content %}
 {% if userLoggedIn == true %}
 <div class="row">
