--- a/web/css/main.css
+++ b/web/css/main.css
@@ -12,5 +12,9 @@
     body {
         padding: 5px;
     }
+    /*body * {*/
+        /*padding-left: 5px;*/
+        /*padding-right: 5px;*/
+    /*}*/
 }
 
