--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -16,7 +16,7 @@
     </span>
     {% endif %}
     <span class="col-xs-6 text-right">
-        <a class="text-left" href="/angular">Angular</a>
+        <a class="text-left" href="/angular/">Angular</a>
     </span>
 </div>
 <div class="row">
