--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container">
     {% block content %}{% endblock %}
 </div>
 </body>
