--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -6,47 +6,53 @@
 {% if userLoggedIn == true %}
 <div class="row">
     {% if not showAllMessages %}
-    <span class="col-xs-6 text-left">
+    <span class="small-6 columns text-left">
         <a href="/facebook?showAllMessages=1">Show all</a>
     </span>
     {% endif %}
     {% if showAllMessages %}
-    <span class="col-xs-6 text-left">
+    <span class="small-6 columns text-left">
         <a href="/facebook?showAllMessages=0">Show unread</a>
     </span>
     {% endif %}
-    <span class="col-xs-6 text-right">
+    <span class="small-6 columns text-right">
         <a class="text-left" href="/angular/">Angular</a>
     </span>
 </div>
 <div class="row">
-    Logged in as: {{ fbUserName }}, id: {{ fbId }}
+    <div class="small-12 columns">
+        Logged in as: {{ fbUserName }}, id: {{ fbId }}
+    </div>
 </div>
 <div class="row">
-    Threads: total unread: {{ messages.unread }}, unseen: {{ messages.unseen }}
-    <ul>
-        {% for thread in messages.threads %}
-        {% if thread.unread > 0 or showAllMessages %}
-        <hr>
-        <li>
-            {{ thread.users }}: unread: {{ thread.unread}}, unseen: {{ thread.unseen }}
-            <ul>
-                {% for message in thread.messages %}
-                {% if (message['unread'] or showAllMessages) %}
-                <li>
-                    {{ message.created_time }}: {{ message.from }}:
-                    <div class="text-success">{{ message.message | raw }}</div>
-                </li>
-                {% endif %}
-                {% endfor %}
-            </ul>
-        </li>
-        {% endif %}
-        {% endfor %}
-    </ul>
+    <div class="small-12 columns">
+        Threads: total unread: {{ messages.unread }}, unseen: {{ messages.unseen }}
+        <ul>
+            {% for thread in messages.threads %}
+            {% if thread.unread > 0 or showAllMessages %}
+            <hr>
+            <li>
+                {{ thread.users }}: unread: {{ thread.unread}}, unseen: {{ thread.unseen }}
+                <ul>
+                    {% for message in thread.messages %}
+                    {% if (message['unread'] or showAllMessages) %}
+                    <li>
+                        {{ message.created_time }}: <span class="label round success">{{ message.from }}</span>
+                        <div class=""><p class="primary">{{ message.message | raw }}</p></div>
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+                </ul>
+            </li>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
 </div>
 <div class="row">
-    Facebook <a href="{{ logoutUrl }}">logout</a>
+    <div class="small-12 columns">
+        Facebook <a href="{{ logoutUrl }}">logout</a>
+    </div>
 </div>
 {% endif %}
 {% if userLoggedIn == false %}
