--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,9 +5,30 @@
 
     <meta name="viewport" content="width=device-width">
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
+    <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
+
+<!--    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/app.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/foundation.min.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.accordion.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.alerts.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.buttons.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.forms.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.mediaQueryToggle.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.navigation.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.orbit.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.reveal.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.tabs.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.tooltips.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.foundation.topbar.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/jquery.placeholder.js"></script>
+    <script src="//cdn.jsdelivr.net/foundation/5.5.1/javascripts/modernizr.foundation.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/5.5.1/stylesheets/app.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/5.5.1/stylesheets/foundation.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/5.5.1/stylesheets/foundation.min.css">-->
+    <script src="//cdn.foundation5.zurb.com/foundation.js"></script>
+    <link rel="stylesheet" href="//cdn.foundation5.zurb.com/foundation.css">
+    <!--<link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />-->
 
     <script type="text/javascript">
         var _gaq = _gaq || [];
@@ -25,7 +46,7 @@
     </script>
 </head>
 <body>
-<div class="container">
+<div class="">
     {% block content %}{% endblock %}
 </div>
 </body>
