--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -21,24 +21,22 @@
 </div>
 <div class="row">
     <div class="small-12 columns">
-        Logged in as: {{ fbUserName }}, id: {{ fbId }}
-    </div>
-</div>
-<div class="row">
-    <div class="small-12 columns">
         Threads: total unread: {{ messages.unread }}, unseen: {{ messages.unseen }}
-        <ul>
+        <ul class="no-bullet">
             {% for thread in messages.threads %}
             {% if thread.unread > 0 or showAllMessages %}
             <hr>
             <li>
-                {{ thread.users }}: unread: {{ thread.unread}}, unseen: {{ thread.unseen }}
-                <ul>
+                <span class="label round primary">{{ thread.users }}: </span>
+                <span class="small-text"> unread: {{ thread.unread }}, unseen: {{ thread.unseen }}</span>
+                <ul class="no-bullet">
                     {% for message in thread.messages %}
                     {% if (message['unread'] or showAllMessages) %}
                     <li>
-                        {{ message.created_time }}: <span class="label round success">{{ message.from }}</span>
-                        <div class=""><p class="primary">{{ message.message | raw }}</p></div>
+                        <span class="label success">{{ message.from }}:</span>
+                        <span class="small-text">{{ message.created_time }}:</span>
+
+                        <div class="message-text">{{ message.message | raw }}</div>
                     </li>
                     {% endif %}
                     {% endfor %}
@@ -47,6 +45,11 @@
             {% endif %}
             {% endfor %}
         </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="small-12 columns">
+        Logged in as: {{ fbUserName }}, id: {{ fbId }}
     </div>
 </div>
 <div class="row">
