--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/5.5.1/stylesheets/foundation.min.css">-->
     <script src="//cdn.foundation5.zurb.com/foundation.js"></script>
     <link rel="stylesheet" href="//cdn.foundation5.zurb.com/foundation.css">
-    <!--<link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />-->
+    <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript">
         var _gaq = _gaq || [];
