--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 480px) {
     ul {
-        padding-left: 10px;
+        padding-left: 15px;
     }
     ul li ul {
         padding-left: 10px;
@@ -16,6 +16,10 @@
     /*body * {*/
         /*padding-left: 5px;*/
         /*padding-right: 5px;*/
+    /*}*/
+
+    /*body {*/
+        /*font-size: 10px;*/
     /*}*/
 }
 
