Rename *.html -> *.twig, extract navigation, enable debug mode for some some ip

--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-{% block content %}{% endblock %}
+{% block bodylayout %}{% endblock %}
 
 <script src="//foundation.zurb.com/assets/js/jquery.js"></script>
 <script src="/foundation/js/foundation.min.js"></script>
