--- a/templates/facebook.twig
+++ b/templates/facebook.twig
@@ -60,7 +60,7 @@
 
     {% if userLoggedIn == false %}
         <div class="row">
-            Facebook <a class="buuton small" href="{{ loginUrl }}">login</a>
+            <a class="button tiny" href="{{ loginUrl }}">Facebook login</a>
         </div>
     {% endif %}
 {% endblock %}
