--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -8,7 +8,7 @@
     <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">-->
     <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
 
-    <link rel="stylesheet" href="/foundation/css/foundation.min.css">
+    <link rel="stylesheet" href="/bower_components/foundation/css/foundation.css">
     <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript">
@@ -30,8 +30,8 @@
 
 {% block bodylayout %}{% endblock %}
 
-<script src="//foundation.zurb.com/assets/js/jquery.js"></script>
-<script src="/foundation/js/foundation.min.js"></script>
+<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/bower_components/foundation/js/foundation.min.js"></script>
 <script>
     $(document).foundation();
 </script>
