--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -8,7 +8,7 @@
     <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">-->
     <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
 
-    <link rel="stylesheet" href="/bower_components/foundation/css/foundation.css">
+    <link rel="stylesheet" href="/bower_components/foundation/css/foundation.min.css">
     <link href="{{ asset('css/main.css') }}" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript">
