--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -13,7 +13,7 @@
 
     <script type="text/javascript">
         var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-XXXXXXXX-X']);
+        _gaq.push(['_setAccount', 'UA-62264970-2']);
         _gaq.push(['_trackPageview']);
 
         (function () {
