--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -3,6 +3,7 @@
 <head>
     <title>{% block title '' %} - My Silex Application</title>
 
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
 
     <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">-->
