--- a/templates/facebook-thread.twig
+++ b/templates/facebook-thread.twig
@@ -6,7 +6,7 @@
 
     <div class="row">
         <div class="small-12 columns">
-            <a href="#" id="showAllBtn" class="button sucess tiny">Show all</a>
+            <a href="#" id="showAllBtn" class="button sucess tiny">Show unread</a>
             <a href="#" id="reloadBtn" class="button warning tiny">Reload</a>
         </div>
     </div>
@@ -42,5 +42,11 @@
             <a class="button tiny" href="{{ logoutUrl }}">Facebook logout</a>
         </div>
     </div>
+
+    <script>
+        $(document).ready(function () {
+            $('#showAllBtn').trigger('click');
+        });
+    </script>
 
 {% endblock %}
