--- a/templates/facebook-thread.twig
+++ b/templates/facebook-thread.twig
@@ -8,6 +8,7 @@
         <div class="small-12 columns">
             <a href="#" id="showAllBtn" class="button sucess tiny">Show unread</a>
             <a href="#" id="reloadBtn" class="button warning tiny">Reload</a>
+            <a href="/facebook/thread/count/{{ thread.id }}" id="countBtn" class="button summary tiny">Count</a>
         </div>
     </div>
 
