Refactor login, add middleware, register facebook api client as silex service

--- a/templates/facebook-thread.twig
+++ b/templates/facebook-thread.twig
@@ -49,11 +49,11 @@
             Logged in as: {{ fbUserName }}, id: {{ fbId }}
         </div>
     </div>
-    <div class="row">
-        <div class="small-12 columns">
-            <a class="button tiny" href="{{ logoutUrl }}">Facebook logout</a>
-        </div>
-    </div>
+    {#<div class="row">#}
+        {#<div class="small-12 columns">#}
+            {#<a class="button tiny" href="{{ logoutUrl }}">Facebook logout</a>#}
+        {#</div>#}
+    {#</div>#}
 
     <script>
         $(document).ready(function () {
